# ROS

./: README.md
line_follower/: CMakeLists.txt
robot_localization/: CMakeLists.txt  package.xml
robot_localization/config/: hector_mapping_params.yaml
robot_localization/launch/: hector_mapping.launch
robot_localization/scripts/: odom_publisher.py
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/launch/: base_planner.launch
robot_navigation/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/launch/: room_simulation.launch
robot_simulation/worlds/: room.world
