<?xml version="1.0"?>
<package format="2">
  <name>robot_localization</name>
  <version>0.0.0</version>
  <description>The robot_localization package</description>

  <maintainer email="bayraktarr16@itu.edu.tr">R.Berkay Bayraktar </maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>hector_mapping</buildtool_depend>
  <depend>sensor_msgs</depend>

</package>
