<?xml version="1.0"?>
<package format="2">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>The robot_simulation package</description>
  <maintainer email="bayraktarr16@itu.edu.tr">R.Berkay Bayraktar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
  </export>
</package>
